--- a/css/main.css
+++ b/css/main.css
@@ -1839,14 +1839,31 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .gallery__item {
+    max-width: 370px;
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 3 * 30px)/ 3);
+        flex-basis: calc((100% - 3 * 30px)/ 3);
+  }
+}
+
 .button__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 50px;
   list-style: none;
+}
+
+@media screen and (max-width: 767px) {
+  .button__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
