--- a/sass/components/portfolio/_buttons.scss
+++ b/sass/components/portfolio/_buttons.scss
@@ -1,8 +1,11 @@
 .button__list{
     display: flex;
-    flex-wrap: wrap;
+justify-content: center;
     margin-bottom: 50px;
     list-style: none;
+    @media screen and (max-width: 767px){
+        flex-wrap: wrap;
+    }
     @media screen and (min-width: $tablet) and (max-width: 1199px){
         justify-content: center;
     }
