--- a/sass/components/portfolio/_gallery.scss
+++ b/sass/components/portfolio/_gallery.scss
@@ -24,4 +24,9 @@
         margin: 15px;
         flex-basis: calc((100% - 2 * 30px)/ 2);
     }
+    @media screen and (min-width: $desktop){
+        max-width: 370px;
+        margin: 15px;
+        flex-basis: calc((100% - 3 * 30px)/ 3);
+    }
 }
