--- a/sass/components/portfolio/_buttons.scss
+++ b/sass/components/portfolio/_buttons.scss
@@ -1,6 +1,6 @@
 .button__list{
     display: flex;
-justify-content: center;
+    justify-content: flex-start;
     margin-bottom: 50px;
     list-style: none;
     @media screen and (max-width: 767px){
