--- a/sass/components/hero/_hero.scss
+++ b/sass/components/hero/_hero.scss
@@ -25,30 +25,30 @@
 }
 @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx){
     .hero{ background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/images/background-images/hero-mobile@2x.jpg);
+      url(../images/background-images/hero-mobile@2x.jpg);
     }
 }
 @media screen and (min-width: $tablet){
     .hero{
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/images/background-images/hero-tablet.jpg);
+        url(../images/background-images/hero-tablet.jpg);
     }
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx){
         .hero{
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/images/background-images/hero-tablet@2x.jpg);
+        url(../images/background-images/hero-tablet@2x.jpg);
         }
     }
 }
 @media screen and (min-width: $desktop){
     .hero{
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/images/background-images/hero-desktop.jpg);
+        url(../images/background-images/hero-desktop.jpg);
     }
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx){
         .hero{
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/images/background-images/hero-desktop@2x.jpg);
+        url(../images/background-images/hero-desktop@2x.jpg);
         }
     }
 }
